# argos

./: .gitattributes  .gitignore  README.md  RUNBOOK_MAC.md  SYNC.md  digital_twin.py  pyproject.toml  requirements.txt  run_mac.sh  run_win.ps1
benchmarks/: README.md  datasets.example.yaml  labels.example.yaml
configs/: graphrag_neo4j.yaml  medgemma_27b.yaml  medgemma_27b_volumetric.yaml  medgemma_4b.yaml  medgemma_local_27b_mps.yaml  medgemma_local_4b.yaml  medgemma_local_4b_chaos.yaml  medgemma_local_4b_mps.yaml  medgemma_local_4b_multiphase.yaml  medgemma_local_4b_multiphase_volumetric.yaml  medgemma_local_4b_rag.yaml  medgemma_local_4b_volumetric.yaml  medgemma_local_4b_volumetric_pathology_target.yaml  medgemma_local_4b_volumetric_rag.yaml  medgemma_ollama_27b.yaml  medgemma_ollama_27b_rag.yaml  medgemma_ollama_27b_volumetric.yaml  medgemma_ollama_27b_volumetric_pathology_target.yaml  medgemma_ollama_27b_volumetric_rag.yaml
contexto/: 00_CONTEXTO.md  01_VISAO.md  02_DOMINIO_CLINICO.md  03_REGULATORIO_LGPD.md  04_ARQUITETURA.md  05_PIPELINE.md  06_SEGMENTACAO.md  07_INFRA_CUSTOS.md  08_ROADMAP.md  09_NEGOCIO.md  10_MATURIDADE_DIGITAL_TWIN.md  11_MEDGEMMA_SCREENING.md
docs/: 12_DATASET_RAG.md  13_GRAPHRAG_NEO4J.md  14_PATHOLOGY_TARGET_PROMPT.md  15_MEDGEMMA_REPORT_SCHEMA_V2.md  16_HARD_NEGATIVE_CURATION.md  DEMO.md  GUIA_DE_USO.md  MAC_BENCHMARK_SETUP.md  RUNNING.md  benchmark_lote2_analise_e_plano.md
dtwin/: __init__.py  core.py  engine.py  medgemma_benchmark.py  medgemma_client.py  medgemma_panel.py  medgemma_panel_multiphase.py  medgemma_screening.py  (+2 more)
(+98 files in other folders)
